# class

./: FDTransient.ipynb  FEM.ipynb  FVHyperbolic.ipynb  FiniteDifference.ipynb  Fundamentals.ipynb  LloydInit.pos
FinalProject/ApplicationCode/Shoreline/: CMakeLists.txt  README.md  WonkySurf.txt  construct.sh  runShoreline.sh  unitTestShoreline.sh
FinalProject/ApplicationCode/Shoreline/Geometries/: WonkySurf.txt  cylinder.nrbpts  surfBump.nrbpts  unitSquare.nrbpts
FinalProject/ApplicationCode/Shoreline/Scripts/: BlenderExportNURBS.py
FinalProject/ApplicationCode/Shoreline/depricated/: print_Extraction.cpp  refine_surf.cpp  subdivide_surf.cpp  testingBasisFuncs.cpp
FinalProject/ApplicationCode/Shoreline/github/: contributing.md  todo.md
FinalProject/ApplicationCode/Shoreline/include/: Problem.h  Solver.h  Surface.h  libraries.h  run_functions.h
FinalProject/ApplicationCode/Shoreline/output/: CtrlPts.csv  CtrlPtsExtracted.m  Tangent.m  rhs.m  solVec.m  solution.m
FinalProject/ApplicationCode/Shoreline/source/: main.cpp
FinalProject/ApplicationCode/Shoreline/source/Problem/: Problem.cpp  compress_BC_and_g.cpp  mmsP0.cpp  mmsP1.cpp  populate_BC_and_g.cpp  populate_forcing.cpp
FinalProject/ApplicationCode/Shoreline/source/Solver/: Solver.cpp  element_assembly.cpp  element_formation.cpp  element_indices.cpp  get_gaussQuad.cpp  petsc_setup.cpp  print_Tangent.cpp  print_solution_to_file.cpp  solve.cpp
FinalProject/ApplicationCode/Shoreline/source/Surface/: Surface.cpp  basisFuncsAndDers.cpp  compute_knots.cpp  extract.cpp  extract_geometry.cpp  extraction_1D.cpp  ien.cpp  print_ctrlPts_to_file.cpp  project_ctrlPts.cpp  (+3 more)
(+38 files in other folders)
